<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/ap_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ssid"/>

        <EditText
                android:id="@+id/iot_ip"
                android:hint="@string/iot_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/shade_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/shade0"
                    android:hint="@string/shade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/shade1"
                    android:hint="@string/shade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/shade2"
                    android:hint="@string/shade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
                android:text="@string/save_net"
                android:onClick="saveNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button"/>



    </LinearLayout>


</android.support.constraint.ConstraintLayout>