<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:background="@color/colorPrimary" android:orientation="vertical"
              android:backgroundTintMode="add">

    <TextView
            android:text="@string/widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up"
                android:id="@+id/move_up" style="@android:style/Widget.DeviceDefault.Button"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down"
                android:id="@+id/move_down" style="@android:style/Widget.DeviceDefault.Button"/>
    </LinearLayout>

</LinearLayout>